--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Surge Install
       - run: npm install --global surge
       - name: Deploy Surge setup
-      - run: surge ./ dispensable-chalk.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      - run: surge ./ Mern-Stack-Dev.surge.sh --token ${{ secrets.SURGE_TOKEN }}
